<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sistema_de_evaluaci_n"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pr_cticas_te_ricas"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_prom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prom"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_pt1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/pr_ctica_1"
            android:layout_below="@+id/tv_pt"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_pt2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/pr_ctica_2"
            android:layout_below="@+id/tv_pt1"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_pt1"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:ems="10"
            android:layout_below="@+id/tv_prom"
            android:layout_alignParentEnd="true"
            android:inputType="number"/>

        <EditText
            android:id="@+id/et_pt2"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:ems="10"
            android:layout_below="@+id/et_pt1"
            android:layout_alignParentEnd="true"
            android:inputType="number"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_pl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pr_cticas_laboratorios"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_proml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prom"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_pl1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/pr_ctica_1"
            android:layout_below="@+id/tv_pl"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_pl2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/pr_ctica_2"
            android:layout_below="@+id/tv_pl1"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_pl3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/pr_ctica_3"
            android:layout_below="@+id/tv_pl2"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_pl4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/pr_ctica_4"
            android:layout_below="@+id/tv_pl3"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/et_pl1"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:ems="10"
            android:layout_below="@+id/tv_proml"
            android:layout_alignParentEnd="true"
            android:inputType="number"/>

        <EditText
            android:id="@+id/et_pl2"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:ems="10"
            android:layout_below="@+id/et_pl1"
            android:layout_alignParentEnd="true"
            android:inputType="number"/>

        <EditText
            android:id="@+id/et_pl3"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:ems="10"
            android:layout_below="@+id/et_pl2"
            android:layout_alignParentEnd="true"
            android:inputType="number"/>

        <EditText
            android:id="@+id/et_pl4"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:ems="10"
            android:layout_below="@+id/et_pl3"
            android:layout_alignParentEnd="true"
            android:inputType="number"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/promedio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/promedio"/>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/resultado"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/calcular"/>

</LinearLayout>